--- a/package.json
+++ b/package.json
@@ -15,13 +15,18 @@
     "@babel/preset-react": "^7.26.3",
     "@radix-ui/react-slot": "^1.1.1",
     "@types/mongoose": "^5.11.97",
+    "@types/nprogress": "^0.2.3",
+    "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "^16.4.7",
     "lucide-react": "^0.469.0",
+    "mongodb": "^6.14.2",
     "mongoose": "^8.9.5",
     "next": "15.1.3",
+    "next-auth": "^4.24.11",
     "next-sitemap": "^4.2.3",
+    "nprogress": "^0.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "tailwind-merge": "^2.6.0",
@@ -29,6 +34,8 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@svgr/webpack": "^8.1.0",
+    "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20",
     "@types/react": "^19.0.7",
     "@types/react-dom": "^19.0.3",
