--- a/package.json
+++ b/package.json
@@ -9,12 +9,16 @@
     "lint": "next lint",
     "postbuild": "next-sitemap"
   },
+  "engines": {
+    "node": "20.14.0"
+  },
   "dependencies": {
     "@babel/core": "^7.26.0",
     "@babel/preset-env": "^7.26.0",
     "@babel/preset-react": "^7.26.3",
     "@radix-ui/react-slot": "^1.1.1",
     "@types/mongoose": "^5.11.97",
+    "@types/next": "^9.0.0",
     "@types/nprogress": "^0.2.3",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.1",
@@ -23,7 +27,7 @@
     "lucide-react": "^0.469.0",
     "mongodb": "^6.14.2",
     "mongoose": "^8.9.5",
-    "next": "15.1.3",
+    "next": "^15.3.1",
     "next-auth": "^4.24.11",
     "next-sitemap": "^4.2.3",
     "nprogress": "^0.2.0",
