Next.js 15 deployment fixed

--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
   "engines": {
     "node": "20.14.0"
   },
+  "resolutions": {
+  "next": "15.0.0"
+  },
   "dependencies": {
     "@babel/core": "^7.26.0",
     "@babel/preset-env": "^7.26.0",
@@ -33,8 +36,8 @@
     "next-auth": "^4.24.11",
     "next-sitemap": "^4.2.3",
     "nprogress": "^0.2.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "vercel": "^41.6.1"
